syntax = "proto3";

package inventory;
option go_package = "proto/inventory";

// Сообщения для продуктов
message Product {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message CreateProductRequest {
  string name = 1;
  double price = 2;
  int32 stock = 3;
}

message CreateProductResponse {
  Product product = 1;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message FilterParams {
  string name = 1;
  double min_price = 2;
  double max_price = 3;
}

message PaginationParams {
  int32 page = 1;
  int32 per_page = 2;
}

message ListProductsRequest {
  FilterParams filter = 1;
  PaginationParams pagination = 2;
}

message ListProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
  int32 page = 3;
  int32 per_page = 4;
}

// Для проверки и обновления стока при создании заказа
message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
}

message CheckStockRequest {
  repeated OrderItem items = 1;
}

message CheckStockResponse {
  bool available = 1;
  string unavailable_product_id = 2;
}

message UpdateStockRequest {
  repeated OrderItem items = 1;
}

message UpdateStockResponse {
  bool success = 1;
}

// Определение сервиса
service InventoryService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (Product);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  
  // Методы для проверки и обновления стока (используются Order Service)
  rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
  rpc UpdateStock(UpdateStockRequest) returns (UpdateStockResponse);
}